--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,11 @@
     <div>
       <h2>Weight <span class="mate">Mate</span></h2>
       <p class="welcome-message">Your personal fitness companion</p>
-      <p>
+      <p class="welcome-message">
         Track your calories, stay motivated, and achieve your fitness goals with
         ease.
       </p>
-      <p>Take the first step towards a healthier, happier you today!</p>
+      <p class="welcome-message">Take the first step towards a healthier, happier you today!</p>
     </div>
   </div>
 
