--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -245,11 +245,12 @@ ion-item.selected {
 
 .food-card-header {
   padding: 0.2em;
-  background: #16443c;
+  background: #21594f;
 }
 
 .food-card-title {
   color: #fff;
+  font-size: 1rem;
 }
 
 .meal-icons {
