--- a/src/app/components/root/root.component.html
+++ b/src/app/components/root/root.component.html
@@ -125,7 +125,8 @@
             {{ "quickTips" | translate }}
           </span>
         </div>
-        <ion-icon class="card-icon" name="bulb-outline"></ion-icon>
+        <!-- <ion-icon class="card-icon" name="bulb-outline"></ion-icon> -->
+        <img class="card-icon" src="assets/img/idea.svg" />
         <div class="overall-info mate count-card">
           {{ ideaOfTheDay }}
         </div>
