--- a/src/app/components/log-food/log-food.component.html
+++ b/src/app/components/log-food/log-food.component.html
@@ -1,26 +1,98 @@
 <div class="card">
+
+  <ion-accordion-group *ngIf="foodSuggestions && foodSuggestions.length > 5 && !showResults">
+    <ion-accordion value="first">
+      <ion-item slot="header" color="dark">
+        <ion-label style="font-size: 0.9rem;">Here's what you usually eat</ion-label>
+      </ion-item>
+      <div slot="content">
+        <ion-list class="modern-list" style="padding-bottom: 0;">
+          <ion-item class="modern-item" *ngFor="let food of foodSuggestions">
+            <div class="item-content">
+              <div class="food-name">{{food.name}}</div>
+              <div class="food-info">
+                <span>Calories: {{ food.calories }}, Fats: {{ food.fat }}g, Carbs:
+                  {{ food.carbohydrates }}g, Protein: {{ food.protein }}g, Serving:
+                  {{ food.serving }}</span>
+              </div>
+            </div>
+            <div class="item-actions">
+              <ion-icon (click)="selectServing(food)" name="add-circle-outline" class="add-icon"></ion-icon>
+            </div>
+          </ion-item>
+        </ion-list>
+      </div>
+    </ion-accordion>
+  </ion-accordion-group>
+
   <div class="card-header">
     <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)"></ion-searchbar>
   </div>
 
   <div class="food-list" *ngIf="showResults">
-    <ion-list style="padding-bottom: 0;">
-      <ion-item *ngFor="let food of results">
-        <ion-label style="margin: 0; white-space: inherit;">
-          <h3 style="margin: 0;">{{food.name}} <span *ngIf="food.count > 0">({{food.count}})</span></h3>
-          <p>Calories: {{ food.calories }}, Fats: {{ food.fat }}g, Carbs:
-            {{ food.carbohydrates }}g, Protein: {{ food.protein }}g, Serving:
-            {{ food.serving }}</p>
-        </ion-label>
-        <ion-icon (click)="addFood(food)" color="tertiary" slot="end" style="color: black;"
-          name="add-outline"></ion-icon>
+    <ion-list class="modern-list" style="padding-bottom: 0;">
+      <ion-item class="modern-item" *ngFor="let food of results">
+        <img
+          *ngIf="food.name.toLowerCase().includes('paratha') || food.name.toLowerCase().includes('chapati') || food.name.toLowerCase().includes('roti') || food.name.toLowerCase().includes('naan'); else soup"
+          style="padding-right: 0.5em;" src="assets/img/roti.svg" />
+        <ng-template #soup>
+          <img
+            *ngIf="food.name.toLowerCase().includes('dal') || food.name.toLowerCase().includes('soup') || food.name.toLowerCase().includes('curry'); else noodles"
+            style="padding-right: 0.5em;" src="assets/img/soup.svg" />
+        </ng-template>
+        <ng-template #noodles>
+          <img
+            *ngIf="food.name.toLowerCase().includes('noodles') || food.name.toLowerCase().includes('maggie'); else rice"
+            style="padding-right: 0.5em;" src="assets/img/noodles.svg" />
+        </ng-template>
+        <ng-template #rice>
+          <img
+            *ngIf="food.name.toLowerCase().includes('poha') || food.name.toLowerCase().includes('rice') || food.name.toLowerCase().includes('chawal') || food.name.toLowerCase().includes('pulao') || food.name.toLowerCase().includes('biryani'); else bread"
+            style="padding-right: 0.5em;" src="assets/img/rice.svg" />
+        </ng-template>
+        <ng-template #bread>
+          <img *ngIf="food.name.toLowerCase().includes('bread'); else south" style="padding-right: 0.5em;"
+            src="assets/img/bread.svg" />
+        </ng-template>
+        <ng-template #south>
+          <img *ngIf="southIndianFoodList.includes(food.name.toLowerCase()); else sweets" style="padding-right: 0.5em;"
+            src="assets/img/dosa.svg" />
+        </ng-template>
+        <ng-template #sweets>
+          <img *ngIf="indianSweets.includes(food.name.toLowerCase()); else chicken" style="padding-right: 0.5em;"
+            src="assets/img/sweet.svg" />
+        </ng-template>
+        <ng-template #chicken>
+          <img *ngIf="food.name.toLowerCase().includes('chicken'); else egg" style="padding-right: 0.5em;"
+            src="assets/img/chicken.svg" />
+        </ng-template>
+        <ng-template #egg>
+          <img
+            *ngIf="food.name.toLowerCase().includes('egg') || food.name.toLowerCase().includes('omelette') || food.name.toLowerCase().includes('eggs'); else others"
+            style="padding-right: 0.5em;" src="assets/img/egg.svg" />
+        </ng-template>
+        <ng-template #others>
+          <img style="padding-right: 0.5em;" src="assets/img/otherfood.svg" />
+        </ng-template>
+        <div class="item-content">
+          <div class="food-name">{{food.name}}</div>
+          <div class="food-info">
+            <span>Calories: {{ food.calories }}, Fats: {{ food.fat }}g, Carbs:
+              {{ food.carbohydrates }}g, Protein: {{ food.protein }}g, Serving:
+              {{ food.serving }}</span>
+          </div>
+        </div>
+        <div class="item-actions">
+          <!-- <span class="food-count">{{food.count}}</span> -->
+          <ion-icon (click)="selectServing(food)" name="add-circle-outline" class="add-icon"></ion-icon>
+        </div>
       </ion-item>
     </ion-list>
   </div>
 </div>
 
-<ion-modal [isOpen]="isAddServingModalOpen" trigger="open-feedback-modal"
-  [initialBreakpoint]="0.5" [breakpoints]="[0, 0.25, 0.5, 0.75]" handleBehavior="cycle">
+<ion-modal [isOpen]="isAddServingModalOpen" (willDismiss)="cancel()" [initialBreakpoint]="0.25" [breakpoints]="[0, 0.25, 0.5, 0.75]"
+  handleBehavior="cycle">
   <ng-template>
     <ion-header>
       <ion-toolbar class="custom-toolbar">
@@ -36,21 +108,25 @@
       <ion-grid style="color: white;">
         <ion-row>
           <ion-col>
-            <ion-select (ionChange)="handleServingSizeChange($event)">
-              <ion-select-option *ngFor="let servingSize of servingSizes" [value]="servingSize">{{servingSize}}</ion-select-option>
-            </ion-select>
-          </ion-col>
-          <ion-col >
-            <ion-select (ionChange)="handleServingSizeBelowChange($event)">
-              <ion-select-option *ngFor="let serving of servingSizeBelow1" [value]="serving">{{serving}}</ion-select-option>
+            <ion-select [(ngModel)]="servingSizeSelected" (ionChange)="handleServingSizeChange($event)"
+              placeholder="Select Serving">
+              <ion-select-option *ngFor="let servingSize of servingSizes"
+                [value]="servingSize">{{servingSize}}</ion-select-option>
             </ion-select>
           </ion-col>
           <ion-col>
-              {{currentSelectedFood.serving}}
+            <ion-select [(ngModel)]="servingSizeBelow1Selected" (ionChange)="handleServingSizeBelowChange($event)"
+              placeholder="Select Serving">
+              <ion-select-option *ngFor="let serving of servingSizeBelow1"
+                [value]="serving">{{serving}}</ion-select-option>
+            </ion-select>
           </ion-col>
         </ion-row>
+        <ion-row>
+
+        </ion-row>
       </ion-grid>
-      <ion-button expand="block" color="success">{{ "add" |
+      <ion-button (click)="addFood()" expand="block" color="success">{{ "add" |
         translate }}</ion-button>
     </ion-content>
   </ng-template>
