--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -17,11 +17,11 @@
         left: -3em;
     }
 
-    ion-toolbar {
-        --color: white;
-        --background: transparent;
-        --border-radius: 3em;
-    }
+    // ion-toolbar {
+    //     --color: white;
+    //     --background: transparent;
+    //     --border-radius: 3em;
+    // }
 
     .logo-header {
         width: 2.3em;
