--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="ion-page" id="main-content">
-    <ion-header [translucent]="true">
+    <!-- <ion-header [translucent]="true">
         <ion-toolbar>
             <ion-title>
                 <img src="assets/img/weight-mate-logo.png" alt="logo" class="logo-header" />
@@ -22,5 +22,6 @@
                 *ngIf="tabActionService.showSelectFoodScreen && !tabActionService.showMainViewScreen"></app-log-food>
         </div>
     </ion-content>
-    <app-footer></app-footer>
+    <app-footer></app-footer> -->
+    <ion-nav [root]="component"></ion-nav>
 </div>
