--- a/src/app/components/log-food/log-food.component.html
+++ b/src/app/components/log-food/log-food.component.html
@@ -1,5 +1,4 @@
-<div class="card">
-
+<!-- <div class="card">
   <ion-accordion-group *ngIf="foodSuggestions && foodSuggestions.length > 5 && !showResults">
     <ion-accordion value="first">
       <ion-item slot="header" color="dark">
@@ -24,13 +23,120 @@
       </div>
     </ion-accordion>
   </ion-accordion-group>
+-->
 
-  <div class="card-header">
-    <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)"></ion-searchbar>
-  </div>
+<ion-modal [isOpen]="isAddServingModalOpen" trigger="open-feedback-modal" [initialBreakpoint]="0.25"
+    [breakpoints]="[0, 0.25, 0.5, 0.75]" handleBehavior="cycle">
+    <ng-template>
+        <ion-content style="--background: linear-gradient(183deg, rgb(170 170 229) 10%, rgba(255, 255, 255, 1) 40%)">
+            <ion-toolbar>
+                <ion-title>Add Serving</ion-title>
+                <ion-buttons slot="end">
+                    <ion-button color="light" (click)="cancel()">Close</ion-button>
+                </ion-buttons>
+            </ion-toolbar>
+            <div style="padding: 2em;">
+                <ion-grid>
+                  <ion-row style="color: white;">
+                    <ion-col>
+                      <ion-select [(ngModel)]="servingSizeSelected" (ionChange)="handleServingSizeChange($event)"
+                        placeholder="Select Serving">
+                        <ion-select-option *ngFor="let servingSize of servingSizes"
+                          [value]="servingSize">{{servingSize}}</ion-select-option>
+                      </ion-select>
+                    </ion-col>
+                    <ion-col>
+                      <ion-select [(ngModel)]="servingSizeBelow1Selected" (ionChange)="handleServingSizeBelowChange($event)"
+                        placeholder="Select Serving">
+                        <ion-select-option *ngFor="let serving of servingSizeBelow1"
+                          [value]="serving">{{serving}}</ion-select-option>
+                      </ion-select>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+                <ion-button (click)="addFood()" expand="block">{{ "add" |
+        translate }}</ion-button>
+            </div>
+        </ion-content>
+    </ng-template>
+</ion-modal>
 
+<ion-header>
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button></ion-back-button>
+      </ion-buttons>
+      <ion-title style="font-weight: bold;">Log Meal</ion-title>
+    </ion-toolbar>
+    <ion-toolbar>
+      <ion-searchbar [debounce]="1000" show-clear-button="always" color="light"
+        (ionInput)="handleInput($event)"></ion-searchbar>
+    </ion-toolbar>
+  </ion-header>
+</ion-header>
+<ion-content class="ion-padding"
+  style="--background: linear-gradient(171deg, rgb(170 170 229) 0%, rgba(255, 255, 255, 1) 100%);">
   <div class="food-list" *ngIf="showResults">
-    <ion-list class="modern-list" style="padding-bottom: 0;">
+    <ion-item class="custom-item" style="padding: 0" *ngFor="let food of results">
+      <ion-row class="ion-align-items-center">
+        <ion-col size="2" style="padding: 0">
+          <img
+            *ngIf="food.name.toLowerCase().includes('paratha') || food.name.toLowerCase().includes('chapati') || food.name.toLowerCase().includes('roti') || food.name.toLowerCase().includes('naan'); else soup"
+            style="padding-right: 0.5em;" src="assets/img/roti.svg" />
+          <ng-template #soup>
+            <img
+              *ngIf="food.name.toLowerCase().includes('dal') || food.name.toLowerCase().includes('soup') || food.name.toLowerCase().includes('curry'); else noodles"
+              style="padding-right: 0.5em;" src="assets/img/soup.svg" />
+          </ng-template>
+          <ng-template #noodles>
+            <img
+              *ngIf="food.name.toLowerCase().includes('noodles') || food.name.toLowerCase().includes('maggie'); else rice"
+              style="padding-right: 0.5em;" src="assets/img/noodles.svg" />
+          </ng-template>
+          <ng-template #rice>
+            <img
+              *ngIf="food.name.toLowerCase().includes('poha') || food.name.toLowerCase().includes('rice') || food.name.toLowerCase().includes('chawal') || food.name.toLowerCase().includes('pulao') || food.name.toLowerCase().includes('biryani'); else bread"
+              style="padding-right: 0.5em;" src="assets/img/rice.svg" />
+          </ng-template>
+          <ng-template #bread>
+            <img *ngIf="food.name.toLowerCase().includes('bread'); else south" style="padding-right: 0.5em;"
+              src="assets/img/bread.svg" />
+          </ng-template>
+          <ng-template #south>
+            <img *ngIf="southIndianFoodList.includes(food.name.toLowerCase()); else sweets"
+              style="padding-right: 0.5em;" src="assets/img/dosa.svg" />
+          </ng-template>
+          <ng-template #sweets>
+            <img *ngIf="indianSweets.includes(food.name.toLowerCase()); else chicken" style="padding-right: 0.5em;"
+              src="assets/img/sweet.svg" />
+          </ng-template>
+          <ng-template #chicken>
+            <img *ngIf="food.name.toLowerCase().includes('chicken'); else egg" style="padding-right: 0.5em;"
+              src="assets/img/chicken.svg" />
+          </ng-template>
+          <ng-template #egg>
+            <img
+              *ngIf="food.name.toLowerCase().includes('egg') || food.name.toLowerCase().includes('omelette') || food.name.toLowerCase().includes('eggs'); else others"
+              style="padding-right: 0.5em;" src="assets/img/egg.svg" />
+          </ng-template>
+          <ng-template #others>
+            <img style="padding-right: 0.5em;" src="assets/img/otherfood.svg" />
+          </ng-template>
+        </ion-col>
+        <ion-col size="8" style="padding-top: 1em;">
+          <ion-label class="meal-label">{{food.name}}</ion-label>
+          <p class="meta-text">Calories: {{ food.calories }}, Fats: {{ food.fat }}g, Carbs:
+            {{ food.carbohydrates }}g, Protein: {{ food.protein }}g, Serving:
+            {{ food.serving }}</p>
+        </ion-col>
+        <ion-col size="2">
+          <ion-icon name="add-circle-outline" class="circular-icon" (click)="selectServing(food)"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </ion-item>
+
+    <!-- <ion-list class="modern-list" style="padding-bottom: 0;">
       <ion-item class="modern-item" *ngFor="let food of results">
         <img
           *ngIf="food.name.toLowerCase().includes('paratha') || food.name.toLowerCase().includes('chapati') || food.name.toLowerCase().includes('roti') || food.name.toLowerCase().includes('naan'); else soup"
@@ -83,51 +189,9 @@
           </div>
         </div>
         <div class="item-actions">
-          <!-- <span class="food-count">{{food.count}}</span> -->
           <ion-icon (click)="selectServing(food)" name="add-circle-outline" class="add-icon"></ion-icon>
         </div>
       </ion-item>
-    </ion-list>
+    </ion-list> -->
   </div>
-</div>
-
-<ion-modal [isOpen]="isAddServingModalOpen" (willDismiss)="cancel()" [initialBreakpoint]="0.25" [breakpoints]="[0, 0.25, 0.5, 0.75]"
-  handleBehavior="cycle">
-  <ng-template>
-    <ion-header>
-      <ion-toolbar class="custom-toolbar">
-        <ion-buttons slot="start">
-          <ion-button class="cancel-button" (click)="cancel()">
-            <ion-icon class="cancel-button" (click)="cancel()" slot="icon-only" name="close-circle-outline"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-        <ion-title class="modal-title">Add Serving</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding profile-content">
-      <ion-grid style="color: white;">
-        <ion-row>
-          <ion-col>
-            <ion-select [(ngModel)]="servingSizeSelected" (ionChange)="handleServingSizeChange($event)"
-              placeholder="Select Serving">
-              <ion-select-option *ngFor="let servingSize of servingSizes"
-                [value]="servingSize">{{servingSize}}</ion-select-option>
-            </ion-select>
-          </ion-col>
-          <ion-col>
-            <ion-select [(ngModel)]="servingSizeBelow1Selected" (ionChange)="handleServingSizeBelowChange($event)"
-              placeholder="Select Serving">
-              <ion-select-option *ngFor="let serving of servingSizeBelow1"
-                [value]="serving">{{serving}}</ion-select-option>
-            </ion-select>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-
-        </ion-row>
-      </ion-grid>
-      <ion-button (click)="addFood()" expand="block" color="success">{{ "add" |
-        translate }}</ion-button>
-    </ion-content>
-  </ng-template>
-</ion-modal>
+</ion-content>
