--- a/src/app/components/v2/dashboard-progress-card/weight-tracker/weight-tracker.component.html
+++ b/src/app/components/v2/dashboard-progress-card/weight-tracker/weight-tracker.component.html
@@ -7,26 +7,29 @@
                 </span>
             </div>
             <div class="calories-info">
-                <div style="height: 15em; width: 20em">
+                <div style="height: 15em">
                     <canvas id="weightTracker" class="chart"></canvas>
                 </div>
             </div>
         </div>
     </ion-col>
 </ion-row>
-<ion-row style="color: white;">
+<ion-row style="color: white;" *ngIf="showAddWeight">
     <div class="main-card overall-card">
         <div class="card-title">
             <span>
-                Add Weight
+                Record New Weight
             </span>
         </div>
         <div class="calories-info">
             <ion-input [(ngModel)]="newWeight"></ion-input>
+            <ion-button (click)="addWeight()">Record New Weight</ion-button>
         </div>
     </div>
-    <ion-col>
-        <ion-button [class.disableClass]="!newWeight || newWeight === 0" id="send-feedback-button" expand="block"
-            color="success" (click)="addWeight()">Record new Weight</ion-button>
-    </ion-col>
 </ion-row>
+
+<ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button>
+        <ion-icon name="add-outline" (click)="showWeight()"></ion-icon>
+    </ion-fab-button>
+</ion-fab>
