--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -17,6 +17,10 @@
     <app-dashboard-progress-card></app-dashboard-progress-card>
 
     <app-dashboard-discover-card></app-dashboard-discover-card>
+
+    <ion-row>
+        <ion-col style="text-align: center; font-size: 1rem; font-style: italic;">{{ ideaOfTheDay }}</ion-col>
+    </ion-row>
 </ion-grid>
 
 <app-dashboard-footer-menu></app-dashboard-footer-menu>
