--- a/src/app/components/v2/dashboard-micronutrients-card/dashboard-micronutrients-card.component.html
+++ b/src/app/components/v2/dashboard-micronutrients-card/dashboard-micronutrients-card.component.html
@@ -9,7 +9,7 @@
             <ion-card-header>
                 <ion-card-title>Carbs</ion-card-title>
                 <ion-card-subtitle>{{
-                    tabActionService.totalCarbs }} / {{ tabActionService?.userInfo?.macros?.carbs?.grams | number }}
+                    tabActionService.totalCarbs }} / {{ tabActionService.userInfo.macros?.carbs?.grams | number }}
                     g</ion-card-subtitle>
             </ion-card-header>
 
@@ -22,7 +22,7 @@
             <ion-card-header>
                 <ion-card-title>Fats</ion-card-title>
                 <ion-card-subtitle>{{
-                    tabActionService.totalFat }} / {{ tabActionService?.userInfo?.macros?.fats?.grams | number }}
+                    tabActionService.totalFat }} / {{ tabActionService.userInfo.macros?.fats?.grams | number }}
                     g</ion-card-subtitle>
             </ion-card-header>
 
@@ -37,7 +37,7 @@
             <ion-card-header>
                 <ion-card-title>Protein</ion-card-title>
                 <ion-card-subtitle>{{
-                    tabActionService.totalProtein }} / {{ tabActionService?.userInfo?.macros?.protein?.grams |
+                    tabActionService.totalProtein }} / {{ tabActionService.userInfo.macros?.protein?.grams |
                     number }}
                     g</ion-card-subtitle>
             </ion-card-header>
