--- a/src/app/components/discover/discover.component.html
+++ b/src/app/components/discover/discover.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
@@ -98,4 +98,4 @@
       </div>
     </ion-slide>
   </ion-slides>
-</ion-content>
+</ion-content> -->
