--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -33,7 +33,7 @@
 </div>
 
 <!-- Log Items modal -->
-<ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)" [initialBreakpoint]="0.75"
+<ion-modal (willDismiss)="onWillDismiss($event)" [initialBreakpoint]="0.75"
   [breakpoints]="[0, 0.25, 0.5, 0.75]" handleBehavior="cycle">
   <ng-template>
     <ion-header>
@@ -108,151 +108,10 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding profile-content" style="color: #fff; --color: #fff">
-      <ion-segment [(ngModel)]="selectedMealToggle" (ionChange)="onSegmentChange($event)">
+      <!-- <ion-segment [(ngModel)]="selectedMealToggle" (ionChange)="onSegmentChange($event)">
         <ion-segment-button value="0">Add Meal</ion-segment-button>
         <ion-segment-button value="1">Delete Meal</ion-segment-button>
-      </ion-segment>
-
-      <ion-slides #slides [options]="slideOpts" (ionSlideDidChange)="onSlideDidChange()">
-        <ion-slide>
-          <ion-grid>
-            <ion-row class="meal-type">
-              <ion-col>
-                <img (click)="selectMealType('breakfast')" src="assets/img/breakfast.svg" />
-              </ion-col>
-              <ion-col>
-                <img (click)="selectMealType('lunch')" src="assets/img/lunch.svg" />
-              </ion-col>
-              <ion-col>
-                <img (click)="selectMealType('snacks')" src="assets/img/snacks.svg" />
-              </ion-col>
-              <ion-col>
-                <img (click)="selectMealType('dinner')" src="assets/img/dinner.svg" />
-              </ion-col>
-            </ion-row>
-            <ion-row class="meal-label">
-              <ion-col (click)="selectMealType('breakfast')">
-                <ion-label id="breakfast">{{ "breakfast" | translate }}</ion-label>
-              </ion-col>
-              <ion-col (click)="selectMealType('lunch')">
-                <ion-label id="lunch">{{ "lunch" | translate }}</ion-label>
-              </ion-col>
-              <ion-col (click)="selectMealType('snacks')">
-                <ion-label id="snacks">{{ "snacks" | translate }}</ion-label>
-              </ion-col>
-              <ion-col (click)="selectMealType('dinner')">
-                <ion-label id="dinner">{{ "dinner" | translate }}</ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col>
-                <app-log-food *ngIf="selectedMealType" [mealType]="selectedMealType"></app-log-food>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-
-        </ion-slide>
-        <ion-slide>
-          <div *ngIf="showFoodCard" style="width: 90%; justify-content: center;">
-            <div>
-              <!-- Breakfast Card -->
-              <ion-card class="foodCard"> 
-                <ion-card-header class="custom-toolbar food-card-header">
-                  <ion-card-title class="food-card-title">Breakfast</ion-card-title>
-                </ion-card-header>
-                <ion-card-content style="padding-bottom: 0;" *ngIf="getBreakFastList().length > 0">
-                  <ion-list style="padding-bottom: 0;">
-                    <ion-item *ngFor="let food of getBreakFastList()">
-                      <ion-label style="margin: 0;">
-                        <h3 style="margin: 0;">{{food.name}} ({{food.count}})</h3>
-                        <p>{{food.calories}} Calories</p>
-                      </ion-label>
-                      <ion-icon (click)="deleteFood(food, $event)" style="color: black;" aria-hidden="true"
-                        name="trash-outline" slot="end"></ion-icon>
-                    </ion-item>
-                  </ion-list>
-                </ion-card-content>
-                <ion-card-content *ngIf="getBreakFastList().length === 0">
-                  No food added for breakfast
-                </ion-card-content>
-                <ion-button fill="clear">Total : {{getBreakFastTotalCalories()}} Calories</ion-button>
-              </ion-card>
-
-              <!-- Lunch Card -->
-              <ion-card class="foodCard">
-                <ion-card-header class="custom-toolbar food-card-header">
-                  <ion-card-title class="food-card-title">Lunch</ion-card-title>
-                </ion-card-header>
-                <ion-card-content style="padding-bottom: 0;" *ngIf="getLunchList().length > 0">
-                  <ion-list style="padding-bottom: 0;">
-                    <ion-item *ngFor="let food of getLunchList()">
-                      <ion-label style="margin: 0;">
-                        <h3 style="margin: 0;">{{food.name}} ({{food.count}})</h3>
-                        <p>{{food.calories}} Calories</p>
-                      </ion-label>
-                      <ion-icon (click)="deleteFood(food, $event)" style="color: black;" aria-hidden="true"
-                        name="trash-outline" slot="end"></ion-icon>
-                    </ion-item>
-                  </ion-list>
-                </ion-card-content>
-                <ion-card-content *ngIf="getLunchList().length === 0">
-                  No food added for lunch
-                </ion-card-content>
-                <ion-button fill="clear">Total : {{getLunchTotalCalories()}} Calories</ion-button>
-
-              </ion-card>
-
-              <!-- Snacks Card -->
-              <ion-card class="foodCard">
-                <ion-card-header class="custom-toolbar food-card-header">
-                  <ion-card-title class="food-card-title">Snacks</ion-card-title>
-                </ion-card-header>
-                <ion-card-content style="padding-bottom: 0;" *ngIf="getSnacksList().length > 0">
-                  <ion-list style="padding-bottom: 0;">
-                    <ion-item *ngFor="let food of getSnacksList()">
-                      <ion-label style="margin: 0;">
-                        <h3 style="margin: 0;">{{food.name}} ({{food.count}})</h3>
-                        <p>{{food.calories}} Calories</p>
-                      </ion-label>
-                      <ion-icon (click)="deleteFood(food, $event)" style="color: black;" aria-hidden="true"
-                        name="trash-outline" slot="end"></ion-icon>
-                    </ion-item>
-                  </ion-list>
-                </ion-card-content>
-                <ion-card-content *ngIf="getSnacksList().length === 0">
-                  No food added for snacks
-                </ion-card-content>
-                <ion-button fill="clear">Total : {{getSnacksTotalCalories()}} Calories</ion-button>
-
-              </ion-card>
-
-              <!-- Dinner Card -->
-              <ion-card class="foodCard">
-                <ion-card-header class="custom-toolbar food-card-header">
-                  <ion-card-title class="food-card-title">Dinner</ion-card-title>
-                </ion-card-header>
-                <ion-card-content style="padding-bottom: 0;" *ngIf="getDinnerList().length > 0">
-                  <ion-list style="padding-bottom: 0;">
-                    <ion-item *ngFor="let food of getDinnerList()">
-                      <ion-label style="margin: 0;">
-                        <h3 style="margin: 0;">{{food.name}} ({{food.count}})</h3>
-                        <p>{{food.calories}} Calories</p>
-                      </ion-label>
-                      <ion-icon (click)="deleteFood(food, $event)" style="color: black;" aria-hidden="true"
-                        name="trash-outline" slot="end"></ion-icon>
-                    </ion-item>
-                  </ion-list>
-                </ion-card-content>
-                <ion-card-content *ngIf="getDinnerList().length === 0">
-                  No food added for dinner
-                </ion-card-content>
-                <ion-button fill="clear">Total : {{getDinnerTotalCalories()}} Calories</ion-button>
-
-              </ion-card>
-            </div>
-          </div>
-        </ion-slide>
-      </ion-slides>
+      </ion-segment> -->
 
     </ion-content>
   </ng-template>
@@ -272,96 +131,11 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding profile-content">
-      <ion-segment (ionChange)="onDiscoverSegmentChange($event)" style="color: #fff;">
-        <ion-segment-button value="0">{{ "recipies" | translate }}</ion-segment-button>
-        <ion-segment-button value="1">{{ "exercises" | translate }}</ion-segment-button>
-      </ion-segment>
 
-      <ion-slides #discoverSlides [options]="discoverSlideOpts" (ionSlideDidChange)="onDiscoverSlideDidChange()">
-        <ion-slide [selected]="selectedDiscoverSegment">
-          <div style="width: 100%; margin-top: 0.5em; margin-bottom: 2em">
-            <iframe id="youtubeIframe" style="width: inherit" height="315"
-              src="https://www.youtube.com/embed/playlist?list=PLZ1eGoTTiYT4glwkHHa7zGh4Ir2Pjr3Pm&feature=shared"
-              frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-            </iframe>
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div style="width: 100%; margin-bottom: 2em">
-            <ion-accordion-group>
-              <ion-accordion value="second">
-                <ion-item slot="header" color="dark">
-                  <ion-label>Day 1: Full Body Strength Training</ion-label>
-                </ion-item>
-                <div class="ion-padding exercise" slot="content">
-                  Focus on squats, push-ups, and glute bridges to build muscle and
-                  burn fat.
-                </div>
-              </ion-accordion>
-              <ion-accordion value="third">
-                <ion-item slot="header" color="dark">
-                  <ion-label>Day 2: Cardio + Core</ion-label>
-                </ion-item>
-                <div class="ion-padding  exercise" slot="content">
-                  Go for a 20–30 minute cardio session followed by core exercises
-                  like crunches and leg raises.
-                </div>
-              </ion-accordion>
-              <ion-accordion value="three">
-                <ion-item slot="header" color="dark">
-                  <ion-label>Day 3: Lower Body Focus</ion-label>
-                </ion-item>
-                <div class="ion-padding exercise" slot="content">
-                  Target your legs with squats, lunges, and glute bridges to
-                  strengthen and tone.
-                </div>
-              </ion-accordion>
-              <ion-accordion value="four">
-                <ion-item slot="header" color="dark">
-                  <ion-label>Day 4: Cardio + Upper Body</ion-label>
-                </ion-item>
-                <div class="ion-padding exercise" slot="content">
-                  Do 20–30 minutes of HIIT cardio followed by push-ups and dumbbell
-                  exercises for your upper body.
-                </div>
-              </ion-accordion>
-              <ion-accordion value="five">
-                <ion-item slot="header" color="dark">
-                  <ion-label>Day 5: Active Recovery / Yoga</ion-label>
-                </ion-item>
-                <div class="ion-padding exercise" slot="content">
-                  Engage in yoga or a light walk to improve flexibility and promote
-                  recovery.
-                </div>
-              </ion-accordion>
-              <ion-accordion value="six">
-                <ion-item slot="header" color="dark">
-                  <ion-label>Day 6: Total Body Circuit</ion-label>
-                </ion-item>
-                <div class="ion-padding exercise" slot="content">
-                  Perform a full-body circuit with jump squats, burpees, and
-                  mountain climbers.
-                </div>
-              </ion-accordion>
-              <ion-accordion value="seven">
-                <ion-item slot="header" color="dark">
-                  <ion-label>Day 7: Cardio + Flexibility</ion-label>
-                </ion-item>
-                <div class="ion-padding exercise" slot="content">
-                  Finish the week with a moderate cardio session and focus on
-                  full-body stretches.
-                </div>
-              </ion-accordion>
-            </ion-accordion-group>
-          </div>
-        </ion-slide>
-      </ion-slides>
     </ion-content>
   </ng-template>
 </ion-modal>
 
-<!-- Feedback Modal -->
 <ion-modal [isOpen]="isFeedbackModalOpen" trigger="open-feedback-modal" (willDismiss)="onWillDismiss($event)"
   [initialBreakpoint]="0.5" [breakpoints]="[0, 0.25, 0.5, 0.75]" handleBehavior="cycle">
   <ng-template>
@@ -398,7 +172,6 @@
   </ng-template>
 </ion-modal>
 
-<!-- Weight Tracker Modal -->
 <ion-modal [isOpen]="isWeightTrackerModalOpen" trigger="open-weight-modal" (willDismiss)="onWillDismiss($event)"
   [initialBreakpoint]="0.75" [breakpoints]="[0, 0.25, 0.5, 0.75]" handleBehavior="cycle">
   <ng-template>
@@ -418,7 +191,6 @@
   </ng-template>
 </ion-modal>
 
-<!-- Account Modal -->
 <ion-modal class="account-modal" [isOpen]="isAccountModalOpen" trigger="open-account-modal"
   (willDismiss)="onWillDismiss($event)" [initialBreakpoint]="0.75" [breakpoints]="[0, 0.25, 0.5, 0.75, 1]"
   handleBehavior="cycle">
@@ -435,7 +207,6 @@
     </ion-header>
 
     <ion-content class="ion-padding profile-content">
-      <!-- Profile Section -->
       <div class="profile-container">
         <div class="profile-avatar">
           <img *ngIf="tabActionService.userInfo.gender === 'female'" src="assets/img/img_avatar2.png"
