--- a/src/app/components/log-food/log-food.component.html
+++ b/src/app/components/log-food/log-food.component.html
@@ -25,7 +25,7 @@
   </ion-accordion-group>
 -->
 
-<ion-modal [isOpen]="isAddServingModalOpen" trigger="open-feedback-modal" [initialBreakpoint]="0.25"
+<ion-modal [isOpen]="isAddServingModalOpen" [initialBreakpoint]="0.25"
     [breakpoints]="[0, 0.25, 0.5, 0.75]" handleBehavior="cycle">
     <ng-template>
         <ion-content style="--background: linear-gradient(183deg, rgb(170 170 229) 10%, rgba(255, 255, 255, 1) 40%)">
