--- a/src/app/components/v2/dashboard-footer-menu/dashboard-footer-menu.component.html
+++ b/src/app/components/v2/dashboard-footer-menu/dashboard-footer-menu.component.html
@@ -13,7 +13,7 @@
 </ion-fab>
 
 <!-- Feedback Modal -->
-<ion-modal [isOpen]="isFeedbackModalOpen" trigger="open-feedback-modal" [initialBreakpoint]="0.5"
+<ion-modal [isOpen]="isFeedbackModalOpen" [initialBreakpoint]="0.5"
     [breakpoints]="[0, 0.25, 0.5, 0.75]" handleBehavior="cycle">
     <ng-template>
         <ion-content style="--background: linear-gradient(171deg, #ff9898 0%, rgba(255, 255, 255, 1) 100%)">
@@ -48,7 +48,7 @@
 </ion-modal>
 
 <!-- Account Modal -->
-<ion-modal class="account-modal" [isOpen]="isAccountModalOpen" trigger="open-account-modal" [initialBreakpoint]="0.75"
+<ion-modal class="account-modal" [isOpen]="isAccountModalOpen" [initialBreakpoint]="0.75"
     [breakpoints]="[0, 0.25, 0.5, 0.75, 1]" handleBehavior="cycle">
     <ng-template>
         <ion-content style="--background: linear-gradient(171deg, #e3e641 0%, rgba(255, 255, 255, 1) 100%)">
