--- a/src/app/components/v2/dashboard-footer-menu/dashboard-footer-menu.component.html
+++ b/src/app/components/v2/dashboard-footer-menu/dashboard-footer-menu.component.html
@@ -86,8 +86,8 @@
                                 </ion-item>
                             </ion-list>
                             <div class="ion-padding" slot="content">
-                                <!-- <ion-button (click)="presentActionSheet()" expand="block" color="success">Upload Profile
-                    Picture</ion-button> -->
+                                <ion-button (click)="presentActionSheet()" expand="block" color="success">Upload Profile
+                    Picture</ion-button>
                             </div>
                         </div>
                     </ion-accordion>
