--- a/src/app/components/v2/dashboard-header/dashboard-header.component.html
+++ b/src/app/components/v2/dashboard-header/dashboard-header.component.html
@@ -1,11 +1,11 @@
 <ion-row>
     <ion-col size="2">
         <ion-avatar>
-            <img *ngIf="tabActionService.userInfo.gender === 'female' && !loggedInUserData?.profilePicture" src="assets/img/img_avatar2.png"
+            <img *ngIf="tabActionService.userInfo.gender === 'female' && !tabActionService.userInfo?.profilePicture" src="assets/img/img_avatar2.png"
                 alt="Profile Avatar" class="avatar-img" />
-            <img *ngIf="tabActionService.userInfo.gender === 'male' && !loggedInUserData?.profilePicture" src="assets/img/img_avatar3.png"
+            <img *ngIf="tabActionService.userInfo.gender === 'male' && !tabActionService.userInfo?.profilePicture" src="assets/img/img_avatar3.png"
                 alt="Profile Avatar" class="avatar-img" />
-                <img *ngIf="loggedInUserData?.profilePicture" [src]="loggedInUserData.profilePicture" class="avatar-img" />
+                <img *ngIf="tabActionService.userInfo.profilePicture" [src]="tabActionService.userInfo.profilePicture" class="avatar-img" />
         </ion-avatar>
     </ion-col>
     <ion-col size="4" class="ion-align-items-center" style="padding-top: 0.4em;">
@@ -13,7 +13,7 @@
             Welcome,
         </div>
         <div style="font-weight: bold; font-size: large;">
-            {{ loggedInUserData.name }}
+            {{ getUserName() }}
         </div>
     </ion-col>
     <ion-col size="4" style="padding-top: 0.4em;">
