--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,7 +48,7 @@
 }
 
 .dialog {
-    background: rgba(0, 0, 0, .25);
+    background: rgb(0 0 0 / 56%);
     color: white;
     padding: 40px;
     width: 340px;
