Google and Gemini

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,7 +20,7 @@
     }
 
     .welcome-message {
-        font-size: 20px;
+        font-size: 1rem;
         font-weight: 300;
         margin-bottom: 20px;
         color: #000;
