--- a/src/app/components/v2/dashboard-discover-card/dashboard-discover-card.component.html
+++ b/src/app/components/v2/dashboard-discover-card/dashboard-discover-card.component.html
@@ -2,15 +2,10 @@
     <ion-col>
         <ion-title>Discover</ion-title>
     </ion-col>
-    <!-- <ion-col size="auto">
-        <ion-nav-link router-direction="forward" [component]="discoverComponent">
-            <a>See Details</a>
-        </ion-nav-link>
-    </ion-col> -->
 </ion-row>
 <ion-row>
     <ion-col>
-        <ion-card class="exercise-card disableClass">
+        <ion-card class="exercise-card">
             <ion-card-header>
                 <ion-nav-link router-direction="forward" [component]="workoutComponent">
                     <ion-card-title>Exercises</ion-card-title>
