--- a/src/app/components/v2/dashboard-discover-card/discover-recipies/discover-recipies.component.scss
+++ b/src/app/components/v2/dashboard-discover-card/discover-recipies/discover-recipies.component.scss
@@ -18,3 +18,26 @@ ion-toolbar {
 .header-md::after {
     background-image: none;
 }
+
+ion-card {
+    width: 95%;
+    max-width: 400px;
+    margin: 10px auto;
+    border-radius: 12px;
+    color: white;
+    text-align: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .video-container {
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    border-radius: 8px;
+    overflow: hidden;
+  }
+  
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
