--- a/src/app/components/v2/dashboard-header/dashboard-header.component.html
+++ b/src/app/components/v2/dashboard-header/dashboard-header.component.html
@@ -12,7 +12,7 @@
         <div>
             Welcome,
         </div>
-        <div style="font-weight: bold; font-size: large;">
+        <div style="font-weight: bold;">
             {{ getUserName() }}
         </div>
     </ion-col>
