--- a/src/app/components/v2/dashboard-meals-card/dashboard-meals-card.component.scss
+++ b/src/app/components/v2/dashboard-meals-card/dashboard-meals-card.component.scss
@@ -14,7 +14,7 @@
     }
 
     .meal-label {
-        font-size: 16px;
+        font-size: 0.7rem;
         font-weight: bold;
         color: #333;
     }
